fixes issue where tabbing on button cause input to jump

--- a/src/client/styles/index.css
+++ b/src/client/styles/index.css
@@ -142,14 +142,14 @@ body {
 .chat-window__input-form__send-button {
   position: absolute;
   right: 10px;
-  top: 8px;
+  top: 10px;
   border: 0;
   border-radius: 50%;
-  width: 35px;
-  height: 35px;
-  background: var(--primary);
+  width: 30px;
+  height: 30px;
+  background: #8a578a;
   color: #fff;
-  font-size: 20px;
+  font-size: 16px;
   opacity: 0;
   transition: all 0.2s;
   transform: translate3d(0, 50px, 0);
